--- a/erp-quimicos/src/main/webapp/css/modalbox/crmregistroproyectos/formaCrmRegistroProyectos.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/crmregistroproyectos/formaCrmRegistroProyectos.css
@@ -95,7 +95,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 .crmregistroproyectos_div_one{
 	width:680px;
-    height:490px;
+    /*height:490px;*/
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -125,7 +125,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
     margin-top:5px;
 	margin-right:10px;
 	margin-left:10px;
-	margin-bottom:10px;
+	margin-bottom:50px;
 }
 
 #grid_productos td{
@@ -146,3 +146,26 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	background:transparent;
 }
 
+
+table tr td.grid {
+	background: #fff;
+	border: 1px solid #ccc;
+	padding: 2px;
+	text-align: center;
+	vertical-align: middle;
+}
+table tr td.grid1 {
+	background: #fff;
+	border: 1px solid #ccc;
+	padding: 2px;
+	text-align: left;
+	vertical-align: middle;
+}
+
+table tr td.grid2 {
+	background: #fff;
+	border: 1px solid #ccc;
+	padding: 2px;
+	text-align: right;
+	vertical-align: middle;
+}
