--- a/erp-quimicos/src/main/webapp/vm/crmregistroproyectos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmregistroproyectos/startup.vm
@@ -121,6 +121,7 @@
                             <div class=" fixed column">
                                 <ul class="pestanas">
                                     <li><a href="#tabx-1"><strong>Proyecto</strong></a></li>
+                                    <li><a href="#tabx-2"><strong>Competencia</strong></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -130,132 +131,146 @@
                                     <div id="tabx-1" class="contenidoPes" >
 										
                                         <table border="0" style="margin:0; padding:0;">
-                                                <tr>
-                                                    <td valign="top"> 
-                                                        <table border="0" class="gral">
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Folio</td>
-                                                                <td width="100"><input type="text" name="folio" style="width:100px;" readOnly="true"></td>
-                                                                <td width="50"></td>
-                                                                <td width="70">Fecha&nbsp;de&nbsp;alta</td>
-                                                                <td width="100"><input type="text" name="fecha_alta" style="width:100px;" readOnly="true"></td>
-                                                                <td width="110"></td>
-                                                                <td width="60"></td>
-                                                                <td width="25"></td>
-                                                            </tr>
-                                                            <tr>
-																<td colspan="9" height="8"></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Nombre</td>
-                                                                <td width="490" colspan="6"><input type="text" name="nombre" value="" style="width:490px;"></td>
-                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nombre"></div></td>
-                                                            </tr>
-                                                            <tr>
-																<td colspan="9" height="8"></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Descripci&oacute;n</td>
-                                                                <td width="490" colspan="6"><textarea name="descripcion" cols="60" rows="1" style="width:490px; height:50px; resize:none;"></textarea></td>
-                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_descripcion"></div></td>
-                                                            </tr>
-                                                            <tr>
-																<td colspan="9" height="8"></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Asignado&nbsp;a</td>
-                                                                <td width="490" colspan="6"><select name="select_agente" style="width:490px;"></select></td>
-                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_agente"></div></td>
-                                                            </tr>
-                                                            <tr>
-																<td colspan="9" height="8"></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Cotacto</td>
-                                                                <td width="430" colspan="5">
-																	<input type="hidden" name="id_contacto" value="0">
-																	<input type="text" name="contacto" style="width:430px;">
-                                                                </td>
-                                                                <td width="60"><a href="#" id="busca_contacto">&nbsp;(Buscar)</a></td>
-                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_contacto"></div></td>
-                                                            </tr>
-                                                            <tr>
-																<td colspan="9" height="8"></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Proveedor</td>
-                                                                <td width="430" colspan="5">
-																	<input type="hidden" name="id_prov" value="0">
-																	<input type="text" name="proveedor" style="width:430px;">
-                                                                </td>
-                                                                <td width="60"><a href="#" id="busca_proveedor">&nbsp;(Buscar)</a></td>
-                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_proveedor"></div></td>
-                                                            </tr>
-                                                            <tr>
-																<td colspan="9" height="8"></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Fecha&nbsp;inicio</td>
-                                                                <td width="100"><input type="text" name="fecha_inicio" style="width:100px;" readonly></td>
-                                                                <td width="50"></td>
-                                                                <td width="70">Fecha&nbsp;fin</td>
-                                                                <td width="100"><input type="text" name="fecha_fin" style="width:100px;" readonly></td>
-                                                                <td width="110"></td>
-                                                                <td width="60"></td>
-                                                                <td width="25"></td>
-                                                            </tr>
-                                                            <tr>
-																<td colspan="9" height="8"></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Estatus</td>
-                                                                <td width="100"><select name="select_estatus" style="width:100px;"></select></td>
-                                                                <td width="50"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_estatus"></div></td>
-                                                                <td width="70">Prioridad</td>
-                                                                <td width="100"><select name="select_prioridad" style="width:100px;"></select></td>
-                                                                <td width="110"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_prioridad"></div></td>
-                                                                <td width="60"></td>
-                                                                <td width="25"></td>
-                                                            </tr>
-                                                            <tr>
-																<td colspan="9" height="8"></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Muestra</td>
-                                                                <td width="100"><select name="select_muestra" style="width:100px;"></select></td>
-                                                                <td width="50"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_muestra"></div></td>
-                                                                <td width="70">Monto</td>
-                                                                <td width="100"><input type="text" name="monto" maxlength="10" style="width:100px;"></td>
-                                                                <td width="110"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_monto"></div></td>
-                                                                <td width="60"></td>
-                                                                <td width="25"></td>
-                                                            </tr>
-                                                            <tr>
-																<td colspan="9" height="8"></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td width="10"></td>
-                                                                <td width="80">Observaciones</td>
-                                                                <td width="490" colspan="6"><textarea name="observaciones" cols="60" rows="1" style="width:490px; height:50px; resize:none;"></textarea></td>
-                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_observacion"></div></td>
-                                                            </tr>
-                                                        </table>
-                                                    </td>
-                                                </tr>
-                                                
-											</table>
+											<tr>
+												<td valign="top"> 
+													<table border="0" class="gral">
+														<tr>
+															<td width="80">Folio</td>
+															<td width="100"><input type="text" name="folio" style="width:100px;" readOnly="true"></td>
+															<td width="30"></td>
+															<td width="70">Fecha&nbsp;de&nbsp;alta</td>
+															<td width="80"><input type="text" name="fecha_alta" style="width:80px;" readOnly="true"></td>
+															<td width="30"></td>
+															<td width="80"></td>
+															<td width="70"></td>
+															<td width="25"></td>
+														</tr>
+														<tr>
+															<td colspan="9" height="8"></td>
+														</tr>
+														<tr>
+															<td width="80">Nombre</td>
+															<td width="490" colspan="7"><input type="text" name="nombre" value="" style="width:490px;"></td>
+															<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nombre"></div></td>
+														</tr>
+														<tr>
+															<td colspan="9" height="8"></td>
+														</tr>
+														<tr>
+															<td width="80">Descripci&oacute;n</td>
+															<td width="490" colspan="7"><textarea name="descripcion" cols="60" rows="1" style="width:490px; height:50px; resize:none;"></textarea></td>
+															<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_descripcion"></div></td>
+														</tr>
+														<tr>
+															<td colspan="9" height="8"></td>
+														</tr>
+														<tr>
+															<td width="80">Asignado&nbsp;a</td>
+															<td width="490" colspan="7"><select name="select_agente" style="width:490px;"></select></td>
+															<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_agente"></div></td>
+														</tr>
+														<tr>
+															<td colspan="9" height="8"></td>
+														</tr>
+														<tr>
+															<td width="80">Cotacto</td>
+															<td width="430" colspan="6">
+																<input type="hidden" name="id_contacto" value="0">
+																<input type="text" name="contacto" style="width:430px;">
+															</td>
+															<td width="60"><a href="#" id="busca_contacto">&nbsp;(Buscar)</a></td>
+															<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_contacto"></div></td>
+														</tr>
+														<tr>
+															<td colspan="9" height="8"></td>
+														</tr>
+														<tr>
+															<td width="80">Proveedor</td>
+															<td width="430" colspan="6">
+																<input type="hidden" name="id_prov" value="0">
+																<input type="text" name="proveedor" style="width:430px;">
+															</td>
+															<td width="60"><a href="#" id="busca_proveedor">&nbsp;(Buscar)</a></td>
+															<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_proveedor"></div></td>
+														</tr>
+														<tr>
+															<td colspan="9" height="8"></td>
+														</tr>
+														<tr>
+															<td width="80">Fecha&nbsp;inicio</td>
+															<td width="100"><input type="text" name="fecha_inicio" style="width:100px;" readonly></td>
+															<td width="30"></td>
+															<td width="70">Fecha&nbsp;fin</td>
+															<td width="80"><input type="text" name="fecha_fin" style="width:80px;" readonly></td>
+															<td width="30"></td>
+															<td width="80">Kilogramos</td>
+															<td width="70"><input type="text" name="kilogramos" maxlength="10" style="width:70px;"></td>
+															<td width="25"></td>
+														</tr>
+														<tr>
+															<td colspan="9" height="8"></td>
+														</tr>
+														<tr>
+															<td width="80">Estatus</td>
+															<td width="100"><select name="select_estatus" style="width:100px;"></select></td>
+															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_estatus"></div></td>
+															<td width="70">Prioridad</td>
+															<td width="80"><select name="select_prioridad" style="width:80px;"></select></td>
+															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_prioridad"></div></td>
+															<td width="80">Periodicidad</td>
+															<td width="70"><select name="select_periodicidad" style="width:70px;"></select></td>
+															<td width="25"></td>
+														</tr>
+														<tr>
+															<td colspan="9" height="8"></td>
+														</tr>
+														<tr>
+															<td width="80">Muestra</td>
+															<td width="100"><select name="select_muestra" style="width:100px;"></select></td>
+															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_muestra"></div></td>
+															<td width="70">Monto</td>
+															<td width="80"><input type="text" name="monto" maxlength="10" style="width:80px;"></td>
+															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_monto"></div></td>
+															<td width="80">Moneda</td>
+															<td width="70"><select name="select_moneda" style="width:70px;"></select></td>
+															<td width="25"></td>
+														</tr>
+														<tr>
+															<td colspan="9" height="8"></td>
+														</tr>
+														<tr>
+															<td width="80">Observaciones</td>
+															<td width="490" colspan="7"><textarea name="observaciones" cols="60" rows="1" style="width:490px; height:50px; resize:none;"></textarea></td>
+															<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_observacion"></div></td>
+														</tr>
+													</table>
+												</td>
+											</tr>
+											
+										</table>
                                         
-                                    </div>
+                                    </div><!--tabx-1-->
                                     
+                                    <div id="tabx-2" class="contenidoPes" >
+                                        <table border="0" style="margin:0; padding:0;">
+											<tr>
+												<td valign="top">
+													<table class="tabla_header_grid">
+														<thead>
+															<tr>
+																<th class="grid" style="background-color:rgb(180,180,180);" width="25">#</th>
+																<th class="grid" style="background-color:rgb(180,180,180);" width="200">Nombre</th>
+																<th class="grid" style="background-color:rgb(180,180,180);" width="100">Precio</th>
+																<th class="grid" style="background-color:rgb(180,180,180);" width="200">Proveedor</th>
+															</tr>
+														</thead>
+														<tbody id="grid_registros">
+														</tbody>
+													</table>
+												</td>
+											</tr>
+										</table>
+                                    </div><!--tabx-2-->
                                 </div>
                             </div>
 
